Grease Pencil Ctrl z bug #42961

Closed
opened 2014-12-19 18:26:01 +01:00 by Ivam Pretti · 21 comments

System Information
Ubuntu 14.04, Intel onboard card

Blender Version 2.73 official test build
Reproduceable: YES
Crash of Blender:NO

Short description of error
when drawing with grease pencil and you press CTRL+z the frame changes to the last frame you used. Should stay on the frame you are working on.

Exact steps for others to reproduce the error
draw on frame 1, change the frame to for example 10, draw again, press CTRL+z, it goes back to frame 1.

System Information Ubuntu 14.04, Intel onboard card Blender Version 2.73 official test build Reproduceable: YES Crash of Blender:NO Short description of error when drawing with grease pencil and you press CTRL+z the frame changes to the last frame you used. Should stay on the frame you are working on. **Exact steps for others to reproduce the error** draw on frame 1, change the frame to for example 10, draw again, press CTRL+z, it goes back to frame 1.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ivampretti

Added subscriber: @ivampretti

This issue was referenced by 071ec918f4

This issue was referenced by 071ec918f4cd55b1615ba5acbdffc8e14c738cfe
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 071ec918f4.

Closed by commit 071ec918f4.
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

eekk copied wrong task number, should be blender/blender-addons#42895... So this is still open

eekk copied wrong task number, should be blender/blender-addons#42895... So this is still open

Added subscriber: @pollend

Added subscriber: @pollend

Removed subscriber: @pollend

Removed subscriber: @pollend
Joshua Leung was assigned by Sergey Sharybin 2014-12-22 10:10:37 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Joshua, do you mind having a look here?

Joshua, do you mind having a look here?
Joshua Leung was unassigned by Julian Eisel 2014-12-29 19:11:22 +01:00
Julian Eisel self-assigned this 2014-12-29 19:11:22 +01:00
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung

Added subscriber: @zeauro

Added subscriber: @zeauro

ubuntu 14.04 64bits NVIDIA Titan Black

hash: cefb764

I cannot reproduce.
Ctrl Z does not change frame for me.

ubuntu 14.04 64bits NVIDIA Titan Black hash: cefb764 I cannot reproduce. Ctrl Z does not change frame for me.
Member

@zeauro, yeah it only happens when using the arrow keys

I have a fix ready for this, but would like to check with @JoshuaLeung before committing

@zeauro, yeah it only happens when using the arrow keys I have a fix ready for this, but would like to check with @JoshuaLeung before committing
Member

Indeed, this seems to be something that only happens when using the arrow keys and not when dragging the time slider. In that case, it's not a bug, but rather, something done by design (or rather, as a compromise). See 8621c71c4c

The rationale for this is something like this:

  • If we put undo on the arrow key frame change, there is the very real risk that an animator using the arrow keys to flip between two keyframes (i.e. equivalent of "rolling" frames in 2D animation) or of using the arrow keys to step through the animation (i.e. either by holding down the key and letting auto-repeat do its thing, or by repeatedly stabbing it quickly) will quickly fill up the undo buffer. We're not talking about just 2-3 undo events here, but more on the order of 100's of them.

There is no way to tell the difference between an operator being called multiple times as the key was held down or pummelled rapidly, vs the operator was purposefully executed to yield an undoable reference point/state. At least not within the event handling system we have in place.

  • Scrubbing the timeline (i.e. holding down the mouse and dragging), or purposefully clicking and setting the time somewhere else are a different matter. For the scrubbing case, an animator can scrub around for a long time, checking the animation, at different speeds and in forward/reverse order, etc. but in the end, only a single undo push gets added. For the purposeful click, we definitely know that it was a unique and intended operation that the animator wishes to have respected - subsequent operations should not skip past it, and it should be able to be undone.

Admittedly, it is not the most ideal situation, and some cases like this still happen. But as the "simplest" solution, this is not that bad either.


EDIT: Now, if we really did have to make the arrow keys case also work, we'd have to resort to doing crazy things like making the screen.frame_offset operator modal. Its event flow would look something like:

  • invoke()
    • Change frame by the amount requested
    • Start time-out timer (say, 500ms)
    • Start modal op
  • modal()
    • if left/right arrow:
      • Perform frame change in the requested direction
      • Reset/restart timer
    • else (other key, or time-up)
      • Exit operator
  • exec()
    • Only perform the frame change requested (i.e. the one that would be initially done when calling invoke())

Now, doing something like this is probably overkill, but is something we could consider if it really was that much of an issue (which I don't think it is).

Indeed, this seems to be something that only happens when using the arrow keys and not when dragging the time slider. In that case, it's not a bug, but rather, something done by design (or rather, as a compromise). See 8621c71c4c The rationale for this is something like this: * If we put undo on the arrow key frame change, there is the very real risk that an animator using the arrow keys to flip between two keyframes (i.e. equivalent of "rolling" frames in 2D animation) or of using the arrow keys to step through the animation (i.e. either by holding down the key and letting auto-repeat do its thing, or by repeatedly stabbing it quickly) will quickly fill up the undo buffer. We're not talking about just 2-3 undo events here, but more on the order of 100's of them. There is no way to tell the difference between an operator being called multiple times as the key was held down or pummelled rapidly, vs the operator was purposefully executed to yield an undoable reference point/state. At least not within the event handling system we have in place. * Scrubbing the timeline (i.e. holding down the mouse and dragging), or purposefully clicking and setting the time somewhere else are a different matter. For the scrubbing case, an animator can scrub around for a long time, checking the animation, at different speeds and in forward/reverse order, etc. but in the end, only a single undo push gets added. For the purposeful click, we definitely know that it was a unique and intended operation that the animator wishes to have respected - subsequent operations should not skip past it, and it should be able to be undone. Admittedly, it is not the most ideal situation, and some cases like this still happen. But as the "simplest" solution, this is not that bad either. --- EDIT: Now, if we really did have to make the arrow keys case also work, we'd have to resort to doing crazy things like making the screen.frame_offset operator modal. Its event flow would look something like: * **invoke()** * Change frame by the amount requested * Start time-out timer (say, 500ms) * Start modal op * **modal()** * if left/right arrow: * Perform frame change in the requested direction * Reset/restart timer * else (other key, or time-up) * Exit operator * **exec()** * Only perform the frame change requested (i.e. the one that would be initially done when calling invoke()) Now, doing something like this is probably overkill, but is something we could consider if it really was that much of an issue (which I don't think it is).
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Member

Closing. Not a bug.

Closing. Not a bug.
Member

@JoshuaLeung, I agree, that's why I wanted to check with you before committing...

I think your proposal would be fine, but I'd rather call the frame change from modal(), as animators might want to search a specific frame or want to slowly scrub through the frames, one by one.
Without implementing your proposal, I'm afraid we'd get more reports on that, so I think it would be worth investigating

@JoshuaLeung, I agree, that's why I wanted to check with you before committing... I think your proposal would be fine, but I'd rather call the frame change from modal(), as animators might want to search a specific frame or want to slowly scrub through the frames, one by one. Without implementing your proposal, I'm afraid we'd get more reports on that, so I think it would be worth investigating
Author

I just think that if you draw and made a mistake, you should be able to press Ctrl+Z and undo only the thing you draw even moving the timeline with the arrow keys. Because its more precise move frame by frame with the arrow keys than an slider. And most of the time we just move about 2 or 3 frames, not 50. And every time its moved to a frame to draw again you should move to the same frame again its a waste of time.

I just think that if you draw and made a mistake, you should be able to press Ctrl+Z and undo only the thing you draw even moving the timeline with the arrow keys. Because its more precise move frame by frame with the arrow keys than an slider. And most of the time we just move about 2 or 3 frames, not 50. And every time its moved to a frame to draw again you should move to the same frame again its a waste of time.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42961
No description provided.